[gd_scene load_steps=6 format=3 uid="uid://b5f7v74v3hc00"]

[ext_resource type="Script" uid="uid://s72x4gxphrth" path="res://Nodes/planet.gd" id="2_hlpc4"]
[ext_resource type="Texture2D" uid="uid://cq5hpcbwv45x3" path="res://Sprites/Planets/planet00.png" id="3_0vwba"]
[ext_resource type="Texture2D" uid="uid://dquppdvqc43qn" path="res://Sprites/Misc/100x100_circle_smooth.png" id="3_jgvqd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jgvqd"]
radius = 103.019

[sub_resource type="CircleShape2D" id="CircleShape2D_hlpc4"]
radius = 147.014

[node name="Planet" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("2_hlpc4")

[node name="Highlight" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(3, 3)
texture = ExtResource("3_jgvqd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jgvqd")

[node name="Planet" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_0vwba")

[node name="CargoContainer" type="GridContainer" parent="."]
offset_left = -67.0
offset_top = -166.0
offset_right = 269.0
offset_bottom = -34.0
scale = Vector2(0.4, 0.4)
columns = 5

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_hlpc4")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
